# ffh-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: 2022_1_5_1vnozc9l.csv  2022_1_5_model-fp6ggnjh.csv  2023_1_12_tkbm4o97.csv
