[project]
name = "ffh-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "olliethomas", email = "1835492+olliethomas@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.36.0",
    "watchdog>=4.0.1",
    "tabulate>=0.9.0",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ffh_dashboard"]
